[gd_scene load_steps=7 format=3 uid="uid://dfnlf1s36gca"]

[ext_resource type="Script" path="res://Scripts/level_end_sparkle.gd" id="1_beww6"]
[ext_resource type="Texture2D" uid="uid://dt7dw7s3qvo44" path="res://Assets/Animations/Sparkle-Sheet.png" id="1_kytvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqyyi"]
size = Vector2(36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0d2e"]
atlas = ExtResource("1_kytvj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd7f6"]
atlas = ExtResource("1_kytvj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_udgnh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0d2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd7f6")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="LevelEndSparkle" type="Area2D"]
process_mode = 3
script = ExtResource("1_beww6")

[node name="EndingBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mqyyi")

[node name="Sparkle" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_udgnh")
autoplay = "default"
frame_progress = 0.70516

[node name="timer" type="Timer" parent="."]
process_mode = 3
wait_time = 2.0
one_shot = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_transition_timer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
